chore(dep): remove aws deps