@@ -4,8 +4,6 @@ import io.quarkus.qute.TemplateData;
 import io.quarkus.runtime.annotations.RegisterForReflection;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
-import software.amazon.awssdk.utils.StringUtils;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -52,25 +50,8 @@ public class RegistrationDto {
         return registration;
     }
 
-    public static RegistrationDto from(Map<String, AttributeValue> item) {
-        RegistrationDto registration = new RegistrationDto();
-        if (item != null && !item.isEmpty()) {
-            registration.setId(item.get("id").s());
-            registration.setEventId(item.get("eventId").s());
-            registration.setName(item.get("name").s());
-            registration.setEmail(item.get("email").s());
-            registration.setPub(item.get("pub").bool());
-            registration.setWaitlist(item.get("waitlist").bool());
-            registration.setPrivacy(item.get("privacy").bool());
-            registration.setVideoRecording(item.getOrDefault("videoRecording", AttributeValue.builder().bool(false).build()).bool());
-            registration.setRemote(item.getOrDefault("remote", AttributeValue.builder().bool(false).build()).bool());
-            registration.setCreated(LocalDateTime.parse(item.get("created").s()));
-            registration.setTtl(Long.valueOf(item.get("ttl").n()));
-        }
-        return registration;
-    }
 
     private static boolean onOrOff(String s) {
-        return (StringUtils.isBlank(s) ? "off" : s).equalsIgnoreCase("on");
+        return (s == null || s.isBlank() ? "off" : s).equalsIgnoreCase("on");
     }
 }
